--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 # Site Settings
 title: Alberto Gómez Martín
-url: 'http://webjeda.com'
+url: 
 
 #change it according to your repository name
 # disabling since we are using a custom domain
