--- a/_data/data.yml
+++ b/_data/data.yml
@@ -78,7 +78,7 @@ education:
         details: |
           Durante este grado desarrollé aptitudes de traducción tanto directa como inversa de inglés y español así como introducción a estudios interculturales e interpretación.
 
-      - degree: Técnico Superior en Desarrollo de Aplicaciones Multiplataforma (Bilingüe)
+      - degree: Técnico Superior en Desarrollo de Aplicaciones Multiplataforma (Bilingüe) Cursado primer año.
         university: I.E.S. Islas Filipinas
         time: 2021 - 2022
         details: |
