--- a/_data/data.yml
+++ b/_data/data.yml
@@ -58,10 +58,10 @@ career-profile:
     title: Sobre mí
     summary: |
       He vivido en Londres, Reino Unido once años. Durante estos años realicé mis estudios universitarios (música clásica y traducción) así como el principio de mi carrera profesional.
-      Trabajé durante siete años en el departamento de <mark>Eventos Privados</mark> del Museo Británico, y en teatros del West End como parte del equipo de <mark>atención al cliente</mark>.
+      Trabajé durante siete años en el departamento de Eventos Privados del <mark>Museo Británico</mark>, y en teatros del West End como parte del equipo de <mark>atención al cliente</mark>.
 
       Me considero un profesional dinámico que afronta nuevos retos con ilusión y eficacia.
-      En la actualidad he decidido cambiar mi carrera corporativa para reciclarme y volver a estar en contacto con el cliente me llena de motivación.
+      En la actualidad he decidido cambiar mi carrera corporativa para reciclarme y volver a estar en contacto y ayudar a los visitanes que vienen a nuestra ciudad me llena de motivación.
 education:
     title: Formación académica
     info:
