--- a/_data/data.yml
+++ b/_data/data.yml
@@ -117,7 +117,7 @@ experiences:
         details: |
           Responsable de la totalidad del ciclo de producción de los proyectos de localización.
 
-          <mark>Gestor de prooyectos técnicos</mark>
+          <mark>Gestor de proyectos técnicos</mark>
             - Análisis de requisistos de cliente
             - Creación de presupuestos
             - Redacción de procesos
